--- a/.github/workflows/publish_wheels.yml
+++ b/.github/workflows/publish_wheels.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches-ignore:
-      - '*'
+      - "*"
     tags:
-      - '*'
+      - "*"
 
 jobs:
   build_wheels:
@@ -15,59 +15,37 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        platform: [ubuntu, macos]
+        platform: [ubuntu, windows]
         version: [latest]
     env:
       GITHUB_TOKEN: ${{ github.token }}
       ARTIFACT_WORKFLOW: osrm-backend.yml
 
     steps:
-    - name: Checkout Project
-      uses: actions/checkout@v3
+      - name: Checkout Project
+        uses: actions/checkout@v3
 
-    - name: Get osrm-backend Artifact ID
-      if: matrix.platform != 'ubuntu'
-      shell: bash
-      run: |
-        echo ARTIFACT_ID=$( \
-          gh api -X GET \
-          repos/${{ github.repository }}/actions/workflows/${{ env.ARTIFACT_WORKFLOW }}/runs \
-          -F status='success' \
-          -F per_page=1 \
-          | jq '.["workflow_runs"][0].id') \
-        >> $GITHUB_ENV
+      - name: Get osrm-backend Artifact ID
+        if: matrix.platform != 'ubuntu'
+        shell: bash
+        run: |
+          echo ARTIFACT_ID=$( \
+            gh api -X GET \
+            repos/${{ github.repository }}/actions/workflows/${{ env.ARTIFACT_WORKFLOW }}/runs \
+            -F status='success' \
+            -F per_page=1 \
+            | jq '.["workflow_runs"][0].id') \
+          >> $GITHUB_ENV
 
-    - name: Download osrm-backend Artifact
-      if: matrix.platform != 'ubuntu'
-      run: |
-        gh run download ${{ env.ARTIFACT_ID }} -n osrm-backend_${{ matrix.platform }}
+      - name: Download osrm-backend Artifact
+        if: matrix.platform != 'ubuntu'
+        run: |
+          gh run download ${{ env.ARTIFACT_ID }} -n osrm-backend_${{ matrix.platform }}
 
-    - name: Run CIBuildWheel
-      uses: pypa/cibuildwheel@v2.14.1
+      - name: Run CIBuildWheel
+        uses: pypa/cibuildwheel@v2.14.1
 
-    - name: Upload Wheels
-      uses: actions/upload-artifact@v3
-      with:
-        path: wheelhouse/*.whl
-
-  upload_all:
-    name: Upload if Release
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    needs: [build_wheels]
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - uses: actions/download-artifact@v3
-      with:
-        name: artifact
-        path: dist
-
-    - uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_SECRET }}
-        repository-url: https://test.pypi.org/legacy/
+      - name: Upload Wheels
+        uses: actions/upload-artifact@v3
+        with:
+          path: wheelhouse/*.whl
