--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        platform: [ubuntu]
+        platform: [ubuntu, windows]
         version: [latest]
 
     steps:
